Fix menu on tablet

--- a/public/less/style.less
+++ b/public/less/style.less
@@ -1746,9 +1746,6 @@ div {
 }
 
 @media (min-width: 768px) {
-	.container {
-		width: 100%;
-	}
 	#matching-videos {
 		display: block;
 	}
@@ -1784,7 +1781,7 @@ div {
 	}
 }
 
-@media (max-width: 769px) {
+@media (max-width: 767px) {
 	#index-index {
 		padding-left: 0px;
 		padding-right: 0px;
